--- a/dashboard.html
+++ b/dashboard.html
@@ -2,10 +2,10 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>KenzoPay - Tableau de bord</title>
+  <title>KenzoPay </title>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
@@ -173,7 +173,7 @@
 <body>
   <!-- HEADER -->
   <div class="topbar">
-    <div style="font-size:18px; font-weight:700;">KenzoPay</div>
+    <div style="font-size:18px; font-weight:700;">Interpay</div>
     <div class="user-info">
       <img id="userPfp" src="https://via.placeholder.com/45" alt="PFP">
       <div class="user-details">
@@ -197,7 +197,8 @@
         <div class="actions">
           <div class="action" id="envoyerAction"><h4>Envoyer</h4></div>
           <div class="action" id="demanderAction"><h4>Demander</h4></div>
-          
+          <div class="action"><h4>Virement</h4></div>
+        </div>
       </div>
 
       <div class="card">
@@ -249,64 +250,128 @@
     </div>
   </div>
 
-  <!-- Première fois -->
-  <div class="modal" id="firstTimeModal" style="display:flex;">
-    <div class="modal-content">
-      <h3>Bienvenue !</h3>
-      <p>Choisissez un pseudo et une photo de profil :</p>
-      <input type="text" id="firstPseudo" placeholder="Pseudo">
-      <input type="url" id="firstPfp" placeholder="URL photo de profil">
-      <button class="btn" id="firstSave">Valider</button>
-    </div>
-  </div>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
-  <script>
-  auth.onAuthStateChanged(user => {
-    if (user) {
-      currentUser = user;
-      currentUid = user.uid;
 
-      // Vérifie si l'utilisateur existe dans Firebase
-      db.ref("users/" + currentUid).once("value", snap => {
-        if (!snap.exists()) {
-          // Première fois -> créer l'utilisateur
-          db.ref("users/" + currentUid).set({
-            email: currentUser.email,
-            username: "NON DEFINI",
-            pdpUrl: "NON DEFINI",
-            balance: 0
-          });
-        } else {
-          // Charger infos utilisateur
-          const userData = snap.val();
-          balance = userData.balance || 0;
-          document.getElementById("balance").textContent = balance;
 
-          // Afficher pseudo + email + pdp
-          document.getElementById("userName").textContent = userData.username;
-          document.getElementById("userEmail").textContent = userData.email;
-          if (userData.pdpUrl && userData.pdpUrl !== "NON DEFINI") {
-            document.getElementById("userPdp").src = userData.pdpUrl;
-          }
+<script>
+const firebaseConfig = {
+  apiKey: "AIzaSyDyWu4TI4PIRXfeb7yqt0WIGClgu10IjkM",
+  authDomain: "kylita-f2923.firebaseapp.com",
+  databaseURL: "https://kylita-f2923-default-rtdb.firebaseio.com",
+  projectId: "kylita-f2923",
+  storageBucket: "kylita-f2923.appspot.com",
+  messagingSenderId: "431823530994",
+  appId: "1:431823530994:web:88a07e633751686e5ad96b",
+  measurementId: "G-F4LLNWQJ16"
+};
 
-          // Vérifier si pseudo ou pdp non défini
-          if (userData.username === "NON DEFINI" || userData.pdpUrl === "NON DEFINI") {
-            document.getElementById("setupModal").style.display = "flex";
-          }
-        }
-      });
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+const db = firebase.database();
 
-      // Charger logs
-      db.ref("users/" + currentUid + "/logs").on("child_added", snap => {
-        const logMsg = snap.val();
-        displayLog(logMsg);
-      });
-    } else {
-      window.location.href = "index.html";
+let currentUser = null, currentUid = null, balance = 0;
+
+auth.onAuthStateChanged(user => {
+  if (!user) {
+    window.location.href = "index.html"; // redirige si non connecté
+    return;
+  }
+
+  currentUser = user;
+  currentUid = user.uid;
+
+  // Récupère les infos utilisateur
+  db.ref("users/" + currentUid).once("value").then(snapshot => {
+    const data = snapshot.val();
+    if (!data) {
+      alert("Erreur : profil utilisateur introuvable. Veuillez compléter votre profil.");
+      auth.signOut();
+      return;
     }
+    updateUserUI(data);
   });
+
+  // Solde en temps réel
+  db.ref("users/" + currentUid + "/balance").on("value", snap => {
+    balance = snap.val() || 0;
+    document.getElementById("balance").textContent = balance;
+  });
+
+  // Logs en temps réel
+  db.ref("users/" + currentUid + "/logs").on("child_added", snap => {
+    displayLog(snap.val());
+  });
+});
+
+// --- Fonctions utilitaires ---
+function updateUserUI(data){
+  document.getElementById("userPseudo").textContent = data.username || "NON DEFINI";
+  document.getElementById("userEmail").textContent = data.email || currentUser.email;
+  document.getElementById("userPfp").src = data.pfp || "https://via.placeholder.com/45";
+  document.getElementById("copyEmail").value = data.email || currentUser.email;
+}
+
+function displayLog(msg) {
+  const logsDiv = document.getElementById("logs");
+  const div = document.createElement("div");
+  div.className = "log";
+  div.innerHTML = `<span>${msg}</span>`;
+  logsDiv.prepend(div);
+}
+
+// --- Actions rapides ---
+document.getElementById("envoyerAction").onclick = () => document.getElementById("donateModal").style.display = "flex";
+document.getElementById("demanderAction").onclick = () => document.getElementById("requestModal").style.display = "flex";
+
+// --- Fermeture modals ---
+document.getElementById("closeDonate").onclick = () => document.getElementById("donateModal").style.display = "none";
+document.getElementById("closeRequest").onclick = () => document.getElementById("requestModal").style.display = "none";
+document.getElementById("closeSettings").onclick = () => document.getElementById("settingsModal").style.display = "none";
+
+// --- Copier email ---
+document.getElementById("copyBtn").onclick = () => {
+  navigator.clipboard.writeText(document.getElementById("copyEmail").value);
+  alert("Email copié !");
+};
+
+// --- Envoyer de l'argent ---
+document.getElementById("sendMoney").onclick = async () => {
+  const destEmail = document.getElementById("destEmail").value.trim();
+  const amount = parseInt(document.getElementById("amount").value);
+  if (!destEmail || !amount) return alert("Champs obligatoires !");
+  if (amount > balance) return alert("Montant supérieur à votre solde.");
+
+  const usersSnap = await db.ref("users").once("value");
+  let destUid = null;
+  usersSnap.forEach(child => {
+    if (child.val().email === destEmail) destUid = child.key;
+  });
+
+  if (!destUid) return alert("Destinataire introuvable.");
+
+  db.ref("users/" + currentUid + "/balance").set(balance - amount);
+  db.ref("users/" + currentUid + "/logs").push(`Vous avez envoyé ${amount}µ à ${destEmail}`);
+  db.ref("users/" + destUid + "/balance").transaction(b => (b || 0) + amount);
+  db.ref("users/" + destUid + "/logs").push(`Vous avez reçu ${amount}µ de ${currentUser.email}`);
+
+  document.getElementById("donateModal").style.display = "none";
+};
+
+// --- Déconnexion ---
+document.getElementById("logoutBtn").onclick = () => auth.signOut();
+
+// --- Paramètres ---
+document.getElementById("settingsBtn").onclick = () => document.getElementById("settingsModal").style.display = "flex";
+document.getElementById("saveSettings").onclick = () => {
+  const newPseudo = document.getElementById("newPseudo").value.trim();
+  const newPfp = document.getElementById("newPfp").value.trim();
+  if (newPseudo || newPfp) {
+    db.ref("users/" + currentUid).update({
+      username: newPseudo || null,
+      pfp: newPfp || null
+    });
+    document.getElementById("settingsModal").style.display = "none";
+  }
+};
 </script>
 
 </body>
