--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>KenzoPay - Tableau de bord</title>
+  <title>KenzoPay </title>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
@@ -13,30 +13,48 @@
     body {
       font-family: 'Inter', sans-serif;
       background: #f7f9fc;
-      color: #1a1a1a;
       min-height: 100vh;
     }
 
     /* ---- HEADER ---- */
     .topbar {
       background: #003087;
-      padding: 15px 40px;
+      padding: 15px 30px;
       color: #fff;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      font-size: 18px;
-      font-weight: 600;
     }
-    .topbar nav a {
+    .user-info {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
+    .user-info img {
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+      border: 2px solid #fff;
+    }
+    .user-details {
+      display: flex;
+      flex-direction: column;
+      line-height: 1.2;
+    }
+    .user-details strong { font-size: 15px; }
+    .user-details small { color: #ddd; font-size: 13px; }
+    .logout {
+      background: #c0392b;
+      border: none;
+      padding: 8px 15px;
+      border-radius: 20px;
       color: #fff;
-      margin-left: 25px;
-      text-decoration: none;
-      font-weight: 500;
+      font-size: 13px;
+      font-weight: 600;
+      cursor: pointer;
+      margin-top: 5px;
     }
-    .topbar nav a:hover {
-      text-decoration: underline;
-    }
+    .logout:hover { background: #e74c3c; }
 
     /* ---- CONTAINER ---- */
     .container {
@@ -48,7 +66,7 @@
       gap: 30px;
     }
 
-    /* ---- BALANCE CARD ---- */
+    /* ---- CARD ---- */
     .card {
       background: #fff;
       border-radius: 12px;
@@ -75,9 +93,7 @@
       font-weight: 600;
       transition: all 0.3s ease;
     }
-    .btn:hover {
-      background: #00457c;
-    }
+    .btn:hover { background: #00457c; }
 
     /* ---- ACTIONS ---- */
     .actions {
@@ -94,9 +110,7 @@
       cursor: pointer;
       transition: 0.2s;
     }
-    .action:hover {
-      background: #e3f0ff;
-    }
+    .action:hover { background: #e3f0ff; }
     .action h4 {
       margin-top: 10px;
       font-size: 16px;
@@ -105,14 +119,7 @@
     }
 
     /* ---- NOTIFICATIONS ---- */
-    .logs {
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-      max-height: 400px;
-      overflow-y: auto;
-    }
+    .logs { max-height: 400px; overflow-y: auto; }
     .log {
       display: flex;
       align-items: center;
@@ -166,14 +173,15 @@
 <body>
   <!-- HEADER -->
   <div class="topbar">
-    <div>KenzoPay</div>
-    <nav>
-      <a href="#">Accueil</a>
-      <a href="#">Envoyer</a>
-      <a href="#">Portefeuille</a>
-      <a href="#">Activité</a>
-      <a href="#">Aide</a>
-    </nav>
+    <div style="font-size:18px; font-weight:700;">Interpay</div>
+    <div class="user-info">
+      <img id="userPfp" src="https://via.placeholder.com/45" alt="PFP">
+      <div class="user-details">
+        <strong id="userPseudo">Chargement...</strong>
+        <small id="userEmail"></small>
+        <button class="logout" id="logoutBtn">Déconnexion</button>
+      </div>
+    </div>
   </div>
 
   <!-- MAIN -->
@@ -182,21 +190,14 @@
     <div>
       <div class="card">
         <div class="balance">Solde : <span id="balance">0</span> µ</div>
-        <button class="btn" id="donateBtn">+ Envoyer de l'argent</button>
       </div>
 
       <div class="card">
         <h3>Actions rapides</h3>
         <div class="actions">
-          <div class="action">
-            <h4>Envoyer</h4>
-          </div>
-          <div class="action">
-            <h4>Demander</h4>
-          </div>
-          <div class="action">
-            <h4>Virement</h4>
-          </div>
+          <div class="action" id="envoyerAction"><h4>Envoyer</h4></div>
+          <div class="action" id="demanderAction"><h4>Demander</h4></div>
+          <div class="action"><h4>Virement</h4></div>
         </div>
       </div>
 
@@ -209,20 +210,17 @@
     <!-- RIGHT SIDE -->
     <div>
       <div class="card">
-        <h3>Comptes & cartes</h3>
-        <p>Ajoutez vos cartes ou comptes bancaires pour sécuriser vos transactions.</p>
-      </div>
-      <div class="card">
-        <h3>Associations</h3>
-        <p>Soutenez les causes qui vous tiennent à cœur en un clic.</p>
+        <h3>Paramètres</h3>
+        <button class="btn" id="settingsBtn">Modifier mes infos</button>
       </div>
     </div>
   </div>
 
-  <!-- MODAL -->
+  <!-- MODALS -->
+  <!-- Envoyer -->
   <div class="modal" id="donateModal">
     <div class="modal-content">
-      <span class="close" id="closeModal">&times;</span>
+      <span class="close" id="closeDonate">&times;</span>
       <h3>Envoyer de l'argent</h3>
       <input type="email" id="destEmail" placeholder="Email du destinataire" required>
       <input type="number" id="amount" placeholder="Montant (µ)" min="1" required>
@@ -231,102 +229,150 @@
     </div>
   </div>
 
-  <!-- SCRIPT -->
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyDyWu4TI4PIRXfeb7yqt0WIGClgu10IjkM",
-      authDomain: "kylita-f2923.firebaseapp.com",
-      databaseURL: "https://kylita-f2923-default-rtdb.firebaseio.com",
-      projectId: "kylita-f2923",
-      storageBucket: "kylita-f2923.appspot.com",
-      messagingSenderId: "431823530994",
-      appId: "1:431823530994:web:88a07e633751686e5ad96b",
-      measurementId: "G-F4LLNWQJ16"
-    };
+  <!-- Demander -->
+  <div class="modal" id="requestModal">
+    <div class="modal-content">
+      <span class="close" id="closeRequest">&times;</span>
+      <h3>Votre email</h3>
+      <input type="text" id="copyEmail" readonly>
+      <button class="btn" id="copyBtn">Copier</button>
+    </div>
+  </div>
 
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.database();
+  <!-- Paramètres -->
+  <div class="modal" id="settingsModal">
+    <div class="modal-content">
+      <span class="close" id="closeSettings">&times;</span>
+      <h3>Modifier mes infos</h3>
+      <input type="text" id="newPseudo" placeholder="Nouveau pseudo">
+      <input type="url" id="newPfp" placeholder="URL photo de profil">
+      <button class="btn" id="saveSettings">Sauvegarder</button>
+    </div>
+  </div>
 
-    let currentUser = null;
-    let currentUid = null;
-    let balance = 0;
 
-   auth.onAuthStateChanged(user => {
-  if (user) {
-    currentUser = user;
-    currentUid = user.uid;
 
-    // Vérifie si le user existe déjà dans la DB
-    db.ref("users/" + currentUid).once("value").then(snapshot => {
-      if (!snapshot.exists()) {
-        // Première connexion → on crée son profil
-        db.ref("users/" + currentUid).set({
-          username: "NON DEFINI",
-          email: user.email,
-          balance: 0,
-          logs: {
-            init: "Compte créé le " + new Date().toLocaleString()
-          }
-        });
-      }
-    });
+<script>
+const firebaseConfig = {
+  apiKey: "AIzaSyDyWu4TI4PIRXfeb7yqt0WIGClgu10IjkM",
+  authDomain: "kylita-f2923.firebaseapp.com",
+  databaseURL: "https://kylita-f2923-default-rtdb.firebaseio.com",
+  projectId: "kylita-f2923",
+  storageBucket: "kylita-f2923.appspot.com",
+  messagingSenderId: "431823530994",
+  appId: "1:431823530994:web:88a07e633751686e5ad96b",
+  measurementId: "G-F4LLNWQJ16"
+};
 
-    // Abonnement au solde
-    db.ref("users/" + currentUid + "/balance").on("value", snap => {
-      balance = snap.val() || 0;
-      document.getElementById("balance").textContent = balance;
-    });
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+const db = firebase.database();
 
-    // Abonnement aux logs
-    db.ref("users/" + currentUid + "/logs").on("child_added", snap => {
-      const logMsg = snap.val();
-      displayLog(logMsg);
-    });
-  } else {
-    window.location.href = "index.html";
+let currentUser = null, currentUid = null, balance = 0;
+
+auth.onAuthStateChanged(user => {
+  if (!user) {
+    window.location.href = "index.html"; // redirige si non connecté
+    return;
   }
+
+  currentUser = user;
+  currentUid = user.uid;
+
+  // Récupère les infos utilisateur
+  db.ref("users/" + currentUid).once("value").then(snapshot => {
+    const data = snapshot.val();
+    if (!data) {
+      alert("Erreur : profil utilisateur introuvable. Veuillez compléter votre profil.");
+      auth.signOut();
+      return;
+    }
+    updateUserUI(data);
+  });
+
+  // Solde en temps réel
+  db.ref("users/" + currentUid + "/balance").on("value", snap => {
+    balance = snap.val() || 0;
+    document.getElementById("balance").textContent = balance;
+  });
+
+  // Logs en temps réel
+  db.ref("users/" + currentUid + "/logs").on("child_added", snap => {
+    displayLog(snap.val());
+  });
 });
 
+// --- Fonctions utilitaires ---
+function updateUserUI(data){
+  document.getElementById("userPseudo").textContent = data.username || "NON DEFINI";
+  document.getElementById("userEmail").textContent = data.email || currentUser.email;
+  document.getElementById("userPfp").src = data.pfp || "https://via.placeholder.com/45";
+  document.getElementById("copyEmail").value = data.email || currentUser.email;
+}
 
-    function displayLog(msg) {
-      const logsDiv = document.getElementById("logs");
-      const div = document.createElement("div");
-      div.className = "log";
-      div.innerHTML = `<span>${msg}</span>`;
-      logsDiv.prepend(div);
-    }
+function displayLog(msg) {
+  const logsDiv = document.getElementById("logs");
+  const div = document.createElement("div");
+  div.className = "log";
+  div.innerHTML = `<span>${msg}</span>`;
+  logsDiv.prepend(div);
+}
 
-    const modal = document.getElementById("donateModal");
-    document.getElementById("donateBtn").onclick = () => modal.style.display = "flex";
-    document.getElementById("closeModal").onclick = () => modal.style.display = "none";
+// --- Actions rapides ---
+document.getElementById("envoyerAction").onclick = () => document.getElementById("donateModal").style.display = "flex";
+document.getElementById("demanderAction").onclick = () => document.getElementById("requestModal").style.display = "flex";
 
-    document.getElementById("sendMoney").onclick = async () => {
-      const destEmail = document.getElementById("destEmail").value.trim();
-      const amount = parseInt(document.getElementById("amount").value);
-      const message = document.getElementById("message").value.trim();
+// --- Fermeture modals ---
+document.getElementById("closeDonate").onclick = () => document.getElementById("donateModal").style.display = "none";
+document.getElementById("closeRequest").onclick = () => document.getElementById("requestModal").style.display = "none";
+document.getElementById("closeSettings").onclick = () => document.getElementById("settingsModal").style.display = "none";
 
-      if (!destEmail || !amount) return alert("Champs obligatoires !");
-      if (amount > balance) return alert("Montant supérieur à votre solde.");
+// --- Copier email ---
+document.getElementById("copyBtn").onclick = () => {
+  navigator.clipboard.writeText(document.getElementById("copyEmail").value);
+  alert("Email copié !");
+};
 
-      const usersSnap = await db.ref("users").once("value");
-      let destUid = null;
-      usersSnap.forEach(child => {
-        if (child.val().email === destEmail) {
-          destUid = child.key;
-        }
-      });
+// --- Envoyer de l'argent ---
+document.getElementById("sendMoney").onclick = async () => {
+  const destEmail = document.getElementById("destEmail").value.trim();
+  const amount = parseInt(document.getElementById("amount").value);
+  if (!destEmail || !amount) return alert("Champs obligatoires !");
+  if (amount > balance) return alert("Montant supérieur à votre solde.");
 
-      if (!destUid) return alert("Destinataire introuvable.");
+  const usersSnap = await db.ref("users").once("value");
+  let destUid = null;
+  usersSnap.forEach(child => {
+    if (child.val().email === destEmail) destUid = child.key;
+  });
 
-      db.ref("users/" + currentUid + "/balance").set(balance - amount);
-      db.ref("users/" + currentUid + "/logs").push("[TRANSFERT] Vous avez envoyé " + amount + "µ à " + destEmail);
+  if (!destUid) return alert("Destinataire introuvable.");
 
-      db.ref("users/" + destUid + "/balance").transaction(b => (b || 0) + amount);
-      db.ref("users/" + destUid + "/logs").push("[RECEPTION] Vous avez reçu " + amount + "µ de " + currentUser.email);
+  db.ref("users/" + currentUid + "/balance").set(balance - amount);
+  db.ref("users/" + currentUid + "/logs").push(`Vous avez envoyé ${amount}µ à ${destEmail}`);
+  db.ref("users/" + destUid + "/balance").transaction(b => (b || 0) + amount);
+  db.ref("users/" + destUid + "/logs").push(`Vous avez reçu ${amount}µ de ${currentUser.email}`);
 
-      modal.style.display = "none";
-    };
-  </script>
+  document.getElementById("donateModal").style.display = "none";
+};
+
+// --- Déconnexion ---
+document.getElementById("logoutBtn").onclick = () => auth.signOut();
+
+// --- Paramètres ---
+document.getElementById("settingsBtn").onclick = () => document.getElementById("settingsModal").style.display = "flex";
+document.getElementById("saveSettings").onclick = () => {
+  const newPseudo = document.getElementById("newPseudo").value.trim();
+  const newPfp = document.getElementById("newPfp").value.trim();
+  if (newPseudo || newPfp) {
+    db.ref("users/" + currentUid).update({
+      username: newPseudo || null,
+      pfp: newPfp || null
+    });
+    document.getElementById("settingsModal").style.display = "none";
+  }
+};
+</script>
+
 </body>
 </html>
