--- a/dashboard.html
+++ b/dashboard.html
@@ -172,17 +172,20 @@
 </head>
 <body>
   <!-- HEADER -->
-  <div class="topbar">
-    <div style="font-size:18px; font-weight:700;">Interpay</div>
-    <div class="user-info">
-      <img id="userPfp" src="https://via.placeholder.com/45" alt="PFP">
-      <div class="user-details">
-        <strong id="userPseudo">Chargement...</strong>
-        <small id="userEmail"></small>
-        <button class="logout" id="logoutBtn">Déconnexion</button>
-      </div>
+<div class="topbar">
+  <div>
+    <img src="logo.png" alt="InterPay" style="height:40px;">
+  </div>
+  <div class="user-info">
+    <img id="userPfp" src="https://via.placeholder.com/45" alt="PFP">
+    <div class="user-details">
+      <strong id="userPseudo">Chargement...</strong>
+      <small id="userEmail"></small>
+      <button class="logout" id="logoutBtn">Déconnexion</button>
     </div>
   </div>
+</div>
+
 
   <!-- MAIN -->
   <div class="container">
